--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree
+[submodule "vim/bundle/vim-yardoc"]
+	path = vim/bundle/vim-yardoc
+	url = https://github.com/noprompt/vim-yardoc.git
